Fix repository queries for idService identifiers