@@ -3,7 +3,9 @@ package com.jlh.jlhautopambackend.services;
 import com.jlh.jlhautopambackend.dto.ServiceRequest;
 import com.jlh.jlhautopambackend.dto.ServiceResponse;
 import com.jlh.jlhautopambackend.mapper.ServiceMapper;
+import com.jlh.jlhautopambackend.modeles.DemandeService;
 import com.jlh.jlhautopambackend.modeles.Service;
+import com.jlh.jlhautopambackend.repository.DemandeServiceRepository;
 import com.jlh.jlhautopambackend.repository.ServiceRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -13,11 +15,12 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -25,6 +28,9 @@ class ServiceServiceImplTest {
 
     @Mock
     private ServiceRepository repo;
+
+    @Mock
+    private DemandeServiceRepository demandeServiceRepository;
 
     @Mock
     private ServiceMapper mapper;
@@ -51,6 +57,7 @@ class ServiceServiceImplTest {
                 .libelle(request.getLibelle())
                 .description(request.getDescription())
                 .prixUnitaire(request.getPrixUnitaire())
+                .archived(false)
                 .build();
 
         savedEntity = Service.builder()
@@ -58,6 +65,7 @@ class ServiceServiceImplTest {
                 .libelle(request.getLibelle())
                 .description(request.getDescription())
                 .prixUnitaire(request.getPrixUnitaire())
+                .archived(false)
                 .build();
 
         response = ServiceResponse.builder()
@@ -65,6 +73,7 @@ class ServiceServiceImplTest {
                 .libelle(savedEntity.getLibelle())
                 .description(savedEntity.getDescription())
                 .prixUnitaire(savedEntity.getPrixUnitaire())
+                .archived(false)
                 .build();
     }
 
@@ -75,15 +84,17 @@ class ServiceServiceImplTest {
                 .libelle("Gardening")
                 .description("Garden maintenance")
                 .prixUnitaire(new BigDecimal("59.99"))
+                .archived(false)
                 .build();
         ServiceResponse otherResp = ServiceResponse.builder()
                 .idService(2)
                 .libelle("Gardening")
                 .description("Garden maintenance")
                 .prixUnitaire(new BigDecimal("59.99"))
+                .archived(false)
                 .build();
 
-        when(repo.findAll()).thenReturn(Arrays.asList(savedEntity, other));
+        when(repo.findAllByArchivedFalseOrderByLibelleAsc()).thenReturn(List.of(savedEntity, other));
         when(mapper.toResponse(savedEntity)).thenReturn(response);
         when(mapper.toResponse(other)).thenReturn(otherResp);
 
@@ -92,32 +103,32 @@ class ServiceServiceImplTest {
         assertEquals(2, results.size());
         assertEquals(response, results.get(0));
         assertEquals(otherResp, results.get(1));
-        verify(repo).findAll();
+        verify(repo).findAllByArchivedFalseOrderByLibelleAsc();
         verify(mapper).toResponse(savedEntity);
         verify(mapper).toResponse(other);
     }
 
     @Test
     void testFindById_WhenFound() {
-        when(repo.findById(1)).thenReturn(Optional.of(savedEntity));
+        when(repo.findByIdServiceAndArchivedFalse(1)).thenReturn(Optional.of(savedEntity));
         when(mapper.toResponse(savedEntity)).thenReturn(response);
 
         Optional<ServiceResponse> result = service.findById(1);
 
         assertTrue(result.isPresent());
         assertEquals(response, result.get());
-        verify(repo).findById(1);
+        verify(repo).findByIdServiceAndArchivedFalse(1);
         verify(mapper).toResponse(savedEntity);
     }
 
     @Test
     void testFindById_WhenNotFound() {
-        when(repo.findById(3)).thenReturn(Optional.empty());
+        when(repo.findByIdServiceAndArchivedFalse(3)).thenReturn(Optional.empty());
 
         Optional<ServiceResponse> result = service.findById(3);
 
         assertFalse(result.isPresent());
-        verify(repo).findById(3);
+        verify(repo).findByIdServiceAndArchivedFalse(3);
         verifyNoInteractions(mapper);
     }
 
@@ -147,29 +158,41 @@ class ServiceServiceImplTest {
                 .libelle("Cleaning")
                 .description("Home cleaning")
                 .prixUnitaire(price)
+                .archived(true)
                 .build();
         Service updatedEntity = Service.builder()
                 .idService(1)
                 .libelle(updateReq.getLibelle())
                 .description(updateReq.getDescription())
                 .prixUnitaire(updateReq.getPrixUnitaire())
+                .archived(false)
                 .build();
         ServiceResponse updatedResp = ServiceResponse.builder()
                 .idService(1)
                 .libelle(updateReq.getLibelle())
                 .description(updateReq.getDescription())
                 .prixUnitaire(updateReq.getPrixUnitaire())
+                .archived(false)
                 .build();
+
+        var associations = List.of(
+                DemandeService.builder().build(),
+                DemandeService.builder().build()
+        );
 
         when(repo.findById(1)).thenReturn(Optional.of(existing));
         when(repo.save(existing)).thenReturn(updatedEntity);
         when(mapper.toResponse(updatedEntity)).thenReturn(updatedResp);
+        when(demandeServiceRepository.findByService_IdService(1)).thenReturn(associations);
 
         Optional<ServiceResponse> result = service.update(1, updateReq);
 
         assertTrue(result.isPresent());
         assertEquals(updatedResp, result.get());
+        assertFalse(existing.isArchived(), "update should reactivate service");
         verify(repo).findById(1);
+        verify(demandeServiceRepository).findByService_IdService(1);
+        verify(demandeServiceRepository).saveAll(associations);
         verify(repo).save(existing);
         verify(mapper).toResponse(updatedEntity);
     }
@@ -182,28 +205,59 @@ class ServiceServiceImplTest {
 
         assertFalse(result.isPresent());
         verify(repo).findById(4);
-        verifyNoMoreInteractions(repo, mapper);
+        verifyNoInteractions(mapper);
+        verifyNoInteractions(demandeServiceRepository);
     }
 
     @Test
-    void testDelete_WhenExists() {
-        when(repo.existsById(1)).thenReturn(true);
+    void testDelete_WhenExistsAndActive() {
+        Service active = Service.builder()
+                .idService(1)
+                .libelle("Cleaning")
+                .archived(false)
+                .build();
+        var associations = List.of(DemandeService.builder().build());
+        when(repo.findById(1)).thenReturn(Optional.of(active));
+        when(demandeServiceRepository.findByService_IdService(1)).thenReturn(associations);
 
         boolean result = service.delete(1);
 
         assertTrue(result);
-        verify(repo).existsById(1);
-        verify(repo).deleteById(1);
+        assertThat(active.isArchived()).isTrue();
+        verify(repo).findById(1);
+        verify(demandeServiceRepository).findByService_IdService(1);
+        verify(demandeServiceRepository).saveAll(associations);
+        verify(repo).save(active);
+        verify(repo, never()).deleteById(any());
+    }
+
+    @Test
+    void testDelete_WhenServiceAlreadyArchived() {
+        Service archived = Service.builder()
+                .idService(2)
+                .libelle("Old")
+                .archived(true)
+                .build();
+        when(repo.findById(2)).thenReturn(Optional.of(archived));
+
+        boolean result = service.delete(2);
+
+        assertTrue(result);
+        verify(repo).findById(2);
+        verifyNoInteractions(demandeServiceRepository);
+        verify(repo, never()).deleteById(any());
+        verify(repo, never()).save(any());
     }
 
     @Test
     void testDelete_WhenNotExists() {
-        when(repo.existsById(5)).thenReturn(false);
+        when(repo.findById(5)).thenReturn(Optional.empty());
 
         boolean result = service.delete(5);
 
         assertFalse(result);
-        verify(repo).existsById(5);
+        verify(repo).findById(5);
+        verifyNoInteractions(demandeServiceRepository);
         verify(repo, never()).deleteById(anyInt());
     }
 }
